# mainproject

./: .gitignore  CMakeLists.txt  README.md  main.c  misc_stuff.c  mproject.h
include/: about.h  conf.h  mptypes.h
src/: about.c  conf.c
